--- a/css/_banner.scss
+++ b/css/_banner.scss
@@ -1,15 +1,30 @@
 .banner{
-    position: relative;height: 40vh;
-    video{
-        width: 100%;height: 100%;object-fit: cover;
-    }
-   h1{
-       width: 100vw;height: 100%;top: 0;left: 0;text-align: center;background-color: transparentize($color: #000000, $amount: .5);padding-top: 30%;
-       position: absolute;color: #fff;font-size: 40px;width: 100%;text-transform: capitalize;
-       span{
-           color: #FECC18;
-       }
-   }
+    height: 50vh;position: relative;;
+
+    #myVideo {
+        width: 100%;height: 100%; object-fit: cover;
+      }
+      
+      .content {
+        position: absolute; bottom: 0; background: rgba(0, 0, 0, 0.5);
+        color: #f1f1f1; width: 100%;padding: 20px;display: flex;justify-content: center;align-items: center;flex-direction: column;
+        h1{
+            span{
+                color: #FECC18;
+            }
+        }
+   
+      }
+      
+      #myBtn {
+        width: 90px;height: 90px;font-size: 18px; padding: 10px;border-radius: 100%;
+        border: none; background: #000;   color: #fff; cursor: pointer;
+      }
+      
+      #myBtn:hover {
+        background: #ddd; color: black;
+      }
+
 }
 
 
