--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,199 +1,329 @@
+@import url('https://fonts.googleapis.com/css?family=Quicksand:400,500,700');
 
-nav {
-	display: flex;justify-content: start;align-items: center;width:100%;position:relative;height:10vh;	overflow:hidden;
 
-    .logo-sm{
-        display: none;
-    }
-    ul {
-        text-align:center;display: flex;justify-content: center;align-items: center;
-  
-        .logo{
-            height: 10vh;display: flex;justify-content: center;align-items: center;padding-right: 200px;
-            a{
-                img{width: 100%;height: 100%;}
-            }
-        }
-        li {
-          
-            a {
-                color:rgb(247, 0, 0); display:inline-block; padding:1em 1.7em;font-size: 25px;text-transform: capitalize;
-                text-decoration:none; border-bottom:2px solid #fff; transition-property:all .2s linear 0s;
-            
-            }
-            a:hover {
-                color: #FECC18;
-            }
-            
-        }
-    }
+.nav {
+    width: 100%;
+    height: 10vh;
+    position: fixed;
+    line-height: 65px;
+    text-align: center;
+    background-color: rgba(17, 17, 17, 0.349);
+    padding-top: 0;
+}
+
+.nav div.logo {
+    width: 100px;
+    height: auto;
+    object-fit: contain;
+    padding-left: 20px;
+}
+
+.nav div.logo a {
+    width: 100%;height: 100%;object-fit: contain;
 }
 
 
 
-
-
-/*styling open close button*/
-.button {
-display: none;
-   a {
-   	text-decoration:none;
-   }
-   .btn-open:after {
-	color:#333;
-	content:"\f0c9";
-	font-family:"FontAwesome";
-	transition-property:all .2s linear 0s;
-
+.nav div.main_list {
+    height: 65px;
+    float: right;
 }
 
-.btn-close:after {
-	color:#fff;
-	content:"\f00d";
-	font-family:"FontAwesome";
-	transition-property:all .2s linear 0s;
-
-}
-.btn-close:hover:after {
-	color: red;
-}
-}
-
-
-/*overlay*/
-.overlay {
-	display:none;position:fixed;top:0;height:100%;width:100%;background:#333;
-	overflow:auto;z-index:99;
-}
-.wrap {
-	color:#e9e9e9;text-align:center;max-width:90%;	margin:0 auto;
-    ul.wrap-nav {
-        border-bottom:1px solid #575757;	text-transform:capitalize;	padding:150px 0px 100px;
-        li {
-            font-size:20px; display:inline-block; vertical-align:top; width:24%; position:relative;
-            a {
-                color:#ffffff;	display:block;padding:8px 0;text-decoration:none;transition-property:all .2s linear 0s;
-            
-            }
-            a:hover {
-                color: #FECC18;
-            }
-        }
-    }
-}
-
-
-
-
-.wrap ul.wrap-nav ul {
-	padding:20px 0;
-}
-.wrap ul.wrap-nav ul li {
-	display:block;font-size:13px;	width:100%;	color:#e9e9e9;
-}
-.wrap ul.wrap-nav ul li a {
-	color:#f0f0f0;
-}
-.wrap ul.wrap-nav ul li a:hover {
-	color:#34B484;
-}
-.social {
-	font-size:25px;	padding:20px;
-    a {
-        color:#ffffff;	text-decoration:none;padding: 10px;
-    
-    }
+.nav div.main_list ul {
+    width: 100%;
+    height: 65px;
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
     
 }
 
+.nav div.main_list ul li {
+    width: auto;
+    height: 65px;
+    padding: 0;
+    padding-right: 3rem;
+}
+
+.nav div.main_list ul li a {
+    text-decoration: none;
+    color: red;
+    line-height: 65px;
+    font-size: 1.5rem;
+}
+
+.nav div.main_list ul li a:hover {
+    color: #FECC18;
+
+}
+
+
+.home {
+    width: 100%;height: 10vh;background-color: rgb(0, 39, 39);
+    
+}
+
+.navTrigger {
+    display: none;
+}
+
+.nav {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    -webkit-transition: all 0.4s ease;
+    transition: all 0.4s ease;
+}
 
 
 
-@media screen and (min-width:1024px) and (max-width:1024px) {
-    #kuni{
+
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+    .container {
+        margin: 0;
+    }
+}
+
+@media screen and (max-width:768px) {
+    .navTrigger {
+        display: block;
+    }
+    .nav div.logo {
+        margin-left: 5px;
+    }
+    .nav div.main_list {
+        width: 100%;
+        height: 0;
+        overflow: hidden;
+        position: absolute;top: 10vh;left: 0;
+    }
+    .nav div.show_list {
+        height: auto;
         display: none;
     }
-nav {
-	
-    .logo-sm{
-        display: none;
+    .nav div.main_list ul {
+        flex-direction: column;
+        width: 108%;
+        height: 100vh;
+        top: 0px;
+        right: 0;
+        left: 0;
+        bottom: 0;
+        background-color:  #FECC18;
+        display: flex;align-items: center;
+        z-index: 99 !important;
     }
-    ul {
-      
-  
-        .logo{
-            padding-right: 10px;
-        }
-        li {
-          
-            a {
-                font-size: 20px;
-            
-            }
-            
-        }
+    .nav div.main_list ul li {
+        width: 100%;
+        text-align: center;
+    }
+    .nav div.main_list ul li a {
+        text-align: center;
+        width: 100%;
+        font-size: 1.5rem;
+       
+    }
+    .nav div.media_button {
+        display: block;
     }
 }
 
 
+
+.navTrigger {
+    cursor: pointer;
+    width: 30px;
+    height: 25px;
+    margin: auto;
+    position: absolute;
+    right: 30px;
+    top: 0;
+    bottom: 0;
+    z-index: 99;
 }
 
+.navTrigger i {
+    background-color: #fff;
+    border-radius: 2px;
+    content: '';
+    display: block;
+    width: 100%;
+    height: 4px;
+}
 
+.navTrigger i:nth-child(1) {
+    -webkit-animation: outT 0.8s backwards;
+    animation: outT 0.8s backwards;
+    -webkit-animation-direction: reverse;
+    animation-direction: reverse;
+}
 
+.navTrigger i:nth-child(2) {
+    margin: 5px 0;
+    -webkit-animation: outM 0.8s backwards;
+    animation: outM 0.8s backwards;
+    -webkit-animation-direction: reverse;
+    animation-direction: reverse;
+}
 
+.navTrigger i:nth-child(3) {
+    -webkit-animation: outBtm 0.8s backwards;
+    animation: outBtm 0.8s backwards;
+    -webkit-animation-direction: reverse;
+    animation-direction: reverse;
+}
 
-@media screen and (max-width:48em) {
-    #kuni{
-        display: none;
+.navTrigger.active i:nth-child(1) {
+    -webkit-animation: inT 0.8s forwards;
+    animation: inT 0.8s forwards;
+}
+
+.navTrigger.active i:nth-child(2) {
+    -webkit-animation: inM 0.8s forwards;
+    animation: inM 0.8s forwards;
+}
+
+.navTrigger.active i:nth-child(3) {
+    -webkit-animation: inBtm 0.8s forwards;
+    animation: inBtm 0.8s forwards;
+}
+
+@-webkit-keyframes inM {
+    50% {
+        -webkit-transform: rotate(0deg);
     }
-nav{
-    .logo-sm{
-        display: list-item;list-style: none;
-        a{
-            height: 10vh;width: 30vw;
-            display: flex;justify-content: center;align-items: center;
-            img{width: 100%;height: 100%;object-fit: cover;}
-        }
+    100% {
+        -webkit-transform: rotate(45deg);
     }
-
-}
- .button{
-     display: list-item;	display:inline;
-     position:absolute;right:50px; top:20px; z-index:999; font-size:30px;
- }
-	.wrap ul.wrap-nav>li {
-		width:100%;
-		padding:20px 0;
-		border-bottom:1px solid #575757;
-	}
-	.wrap ul.wrap-nav {
-		padding:30px 0px 0px;
-	}
-	nav ul {
-		opacity:0;
-		visibility:hidden;
-	}
-	.social {
-		color:#c1c1c1;
-		font-size:25px;
-		padding:15px 0;
-	}
-
 }
 
+@keyframes inM {
+    50% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(45deg);
+    }
+}
 
+@-webkit-keyframes outM {
+    50% {
+        -webkit-transform: rotate(0deg);
+    }
+    100% {
+        -webkit-transform: rotate(45deg);
+    }
+}
 
+@keyframes outM {
+    50% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(45deg);
+    }
+}
 
+@-webkit-keyframes inT {
+    0% {
+        -webkit-transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        -webkit-transform: translateY(9px) rotate(0deg);
+    }
+    100% {
+        -webkit-transform: translateY(9px) rotate(135deg);
+    }
+}
 
+@keyframes inT {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        transform: translateY(9px) rotate(0deg);
+    }
+    100% {
+        transform: translateY(9px) rotate(135deg);
+    }
+}
 
+@-webkit-keyframes outT {
+    0% {
+        -webkit-transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        -webkit-transform: translateY(9px) rotate(0deg);
+    }
+    100% {
+        -webkit-transform: translateY(9px) rotate(135deg);
+    }
+}
 
+@keyframes outT {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        transform: translateY(9px) rotate(0deg);
+    }
+    100% {
+        transform: translateY(9px) rotate(135deg);
+    }
+}
 
+@-webkit-keyframes inBtm {
+    0% {
+        -webkit-transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        -webkit-transform: translateY(-9px) rotate(0deg);
+    }
+    100% {
+        -webkit-transform: translateY(-9px) rotate(135deg);
+    }
+}
 
+@keyframes inBtm {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        transform: translateY(-9px) rotate(0deg);
+    }
+    100% {
+        transform: translateY(-9px) rotate(135deg);
+    }
+}
 
+@-webkit-keyframes outBtm {
+    0% {
+        -webkit-transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        -webkit-transform: translateY(-9px) rotate(0deg);
+    }
+    100% {
+        -webkit-transform: translateY(-9px) rotate(135deg);
+    }
+}
 
+@keyframes outBtm {
+    0% {
+        transform: translateY(0px) rotate(0deg);
+    }
+    50% {
+        transform: translateY(-9px) rotate(0deg);
+    }
+    100% {
+        transform: translateY(-9px) rotate(135deg);
+    }
+}
 
-
-
+.affix {
+    padding: 0;
+    background-color: #111;
+}
 
 
 
